# LookGender

./: README.md  lookgender.cpp  makefile  run.sh
data/: Untitled.ipynb  genlabel.py  trans_tif2jpg.py
data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
lib/cf_libs/common/: cv_ext.hpp
lib/cf_libs/kcf/: kcf_tracker.hpp
lib/gender/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gender_svm  test.cpp
lib/gender/includes/: gender_classification.h  gender_classification2.h  histogram.hpp
lib/gender/lbp_features/: CMakeCache.txt  Makefile  cmake_install.cmake  lbp_features.cpp  lbp_image  lbp_video  lbp_video.cpp  out.txt  pretrainSVM.xml
lib/gender/src/: gender_classification.cpp  gender_classification2.cpp  svm.cpp
lib/gender/test/: .allfaces_tran.txt.swp  gender  makefile  pretrainSVM.xml  run.sh  test.cpp
lib/pico/rnt/sample/: face_detect_track  face_detect_track.cpp  makefile
model/gender/: pretrainSVM.xml
